1688Admin : add web index link

--- a/src/apps/1688Admin/components/topbar/index-main.pug
+++ b/src/apps/1688Admin/components/topbar/index-main.pug
@@ -3,6 +3,10 @@
         img(src=IMG_DIR + 'logo-white.png')
         span 双创智慧园区后台管理系统
     .right-shoulder
+        .pull-left
+            a.btn.btn-large.btn-topbar(href="index.html" target="_blank")
+                i.fa.fa-home
+                |&nbsp;门户首页
         .dropdown.pull-left
             .btn.btn-large.btn-topbar#topbar_menu_btn(data-toggle="dropdown" aria-haspopup="true" aria-expanded="true")
                 i.fa.fa-user-circle-o
