1688Admin : renamed some pages

--- a/src/apps/1688Admin/webapp/index-estate.pug
+++ b/src/apps/1688Admin/webapp/index-estate.pug
@@ -95,37 +95,37 @@ block js
                             title : "采购申请",
                             icon_class : "fa fa-shopping-cart",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='estate-warehouse-purchase.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='estate-stock-purchase.html'"
                         },
                         {
                             title : "固定资产",
                             icon_class : "fa fa-cubes",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='estate-warehouse-assets.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='estate-stock-assets.html'"
                         },
                         {
                             title : "入库管理",
                             icon_class : "fa fa-sign-in",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='estate-warehouse-storage.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='estate-stock-storage.html'"
                         },
                         {
                             title : "领用申请",
                             icon_class : "fa fa-hand-stop-o",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='estate-warehouse-apply.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='estate-stock-apply.html'"
                         },
                         {
                             title : "仓库预览",
                             icon_class : "fa fa-eye",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='estate-warehouse-preview.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='estate-stock-preview.html'"
                         },
                         {
                             title : "物品类型管理",
                             icon_class : "fa fa-files-o",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='estate-warehouse-cat.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='estate-stock-restype.html'"
                         }
                     ]
                 },
@@ -226,13 +226,13 @@ block js
                             title : "信息管理",
                             icon_class : "fa fa-bicycle",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='estate-distribution-info.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='estate-delivery-info.html'"
                         },
                         {
                             title : "订单管理",
                             icon_class : "fa fa-file-text",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='estate-distribution-order.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='estate-delivery-order.html'"
                         }
                     ]
                 },
