--- a/src/apps/1688Admin/webapp/index-operate.pug
+++ b/src/apps/1688Admin/webapp/index-operate.pug
@@ -64,13 +64,13 @@ block js
                             title : "商家资讯",
                             icon_class : "fa fa-newspaper-o",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='operate-business-info.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='operate-bizinfo.html'"
                         },
                         {
                             title : "商家资讯发布",
                             icon_class : "fa fa-plus-square",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='operate-business-info-new.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='operate-bizinfo-new.html'"
                         }
                     ]
                 },
@@ -121,25 +121,25 @@ block js
                             title : "明星企业",
                             icon_class : "fa fa-star",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='operate-co-star.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='operate-orgstar.html'"
                         },
                         {
                             title : "新增明星企业",
                             icon_class : "fa fa-plus-square",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='operate-co-star-new.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='operate-orgstar-new.html'"
                         },
                         {
                             title : "创业领军企业",
                             icon_class : "fa fa-trophy",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='operate-co-lead.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='operate-orglead.html'"
                         },
                         {
                             title : "新增创业领军企业",
                             icon_class : "fa fa-plus-square",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='operate-co-lead-new.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='operate-orglead-new.html'"
                         }
                     ]
                 },
