1688Admin : add form styles and summernote editor

--- a/src/apps/1688Admin/components/system-list/index.pug
+++ b/src/apps/1688Admin/components/system-list/index.pug
@@ -1,46 +1,47 @@
-.row
-    .col-xs-4
-        a.sl-btn.touch-active(href='index-merchant.html#merchant.html' target="_blank")
-            .sl-btn-icon
-                i.fa.fa-handshake-o
-            .sl-btn-title 招商管理
-    .col-xs-4
-        a.sl-btn.touch-active(href='index-chuangye.html#chuangye.html' target="_blank")
-            .sl-btn-icon
-                i.fa.fa-flag-o
-            .sl-btn-title 创业孵化
-    .col-xs-4
-        a.sl-btn.touch-active(href='index-operate.html#operate.html' target="_blank")
-            .sl-btn-icon
-                i.fa.fa-line-chart
-            .sl-btn-title 运营管理
-    .col-xs-4
-        a.sl-btn.touch-active(href='index-oa.html#oa.html' target="_blank")
-            .sl-btn-icon
-                i.fa.fa-print
-            .sl-btn-title 协同办公
-    .col-xs-4
-        a.sl-btn.touch-active(href='index-resource.html#resource.html' target="_blank")
-            .sl-btn-icon
-                i.fa.fa-database
-            .sl-btn-title 资源服务
-    .col-xs-4
-        a.sl-btn.touch-active(href='index-party.html#party.html' target="_blank")
-            .sl-btn-icon
-                i.fa.fa-star-o
-            .sl-btn-title 党政管理
-    .col-xs-4
-        a.sl-btn.touch-active(href='index-sys.html#sys.html' target="_blank")
-            .sl-btn-icon
-                i.fa.fa-cogs
-            .sl-btn-title 系统管理
-    .col-xs-4
-        a.sl-btn.touch-active(href='index-platform.html#platform.html' target="_blank")
-            .sl-btn-icon
-                i.fa.fa-desktop
-            .sl-btn-title 信息化平台
-    .col-xs-4
-        a.sl-btn.touch-active(href='index-estate.html#estate.html' target="_blank")
-            .sl-btn-icon
-                i.fa.fa-building-o
-            .sl-btn-title 物业管理
+.row-space-10
+    .row.no-bottom
+        .col-xs-4
+            a.sl-btn.touch-active(href='index-merchant.html#merchant.html' target="_blank")
+                .sl-btn-icon
+                    i.fa.fa-handshake-o
+                .sl-btn-title 招商管理
+        .col-xs-4
+            a.sl-btn.touch-active(href='index-chuangye.html#chuangye.html' target="_blank")
+                .sl-btn-icon
+                    i.fa.fa-flag-o
+                .sl-btn-title 创业孵化
+        .col-xs-4
+            a.sl-btn.touch-active(href='index-operate.html#operate.html' target="_blank")
+                .sl-btn-icon
+                    i.fa.fa-line-chart
+                .sl-btn-title 运营管理
+        .col-xs-4
+            a.sl-btn.touch-active(href='index-oa.html#oa.html' target="_blank")
+                .sl-btn-icon
+                    i.fa.fa-print
+                .sl-btn-title 协同办公
+        .col-xs-4
+            a.sl-btn.touch-active(href='index-resource.html#resource.html' target="_blank")
+                .sl-btn-icon
+                    i.fa.fa-database
+                .sl-btn-title 资源服务
+        .col-xs-4
+            a.sl-btn.touch-active(href='index-party.html#party.html' target="_blank")
+                .sl-btn-icon
+                    i.fa.fa-star-o
+                .sl-btn-title 党政管理
+        .col-xs-4
+            a.sl-btn.touch-active(href='index-sys.html#sys.html' target="_blank")
+                .sl-btn-icon
+                    i.fa.fa-cogs
+                .sl-btn-title 系统管理
+        .col-xs-4
+            a.sl-btn.touch-active(href='index-platform.html#platform.html' target="_blank")
+                .sl-btn-icon
+                    i.fa.fa-desktop
+                .sl-btn-title 信息化平台
+        .col-xs-4
+            a.sl-btn.touch-active(href='index-estate.html#estate.html' target="_blank")
+                .sl-btn-icon
+                    i.fa.fa-building-o
+                .sl-btn-title 物业管理
