--- a/src/apps/1688Admin/components/topbar/index.styl
+++ b/src/apps/1688Admin/components/topbar/index.styl
@@ -70,6 +70,7 @@ POPMENU_ARROW_COLOR = THEME_COLOR
         float right
         font-size 0
         line-height BTN_HEIGHT
+        .pull-left
         .dropdown
             line-height 0
         .btn-topbar
