--- a/src/apps/1688Admin/webapp/layout.pug
+++ b/src/apps/1688Admin/webapp/layout.pug
@@ -21,6 +21,7 @@ html
             link(rel='stylesheet', href=CSS_DIR + 'bootstrapValidator.min.css')
             link(rel='stylesheet', href=CSS_DIR + 'bootstrap-editable.css')
             link(rel='stylesheet', href=CSS_DIR + 'bootstrap-treeview.min.css')
+            link(rel='stylesheet', href=CSS_DIR + 'toastr.min.css')
             link(rel='stylesheet', href=CSS_DIR + 'index.css')
             
     body
@@ -38,4 +39,6 @@ html
             script(src=JS_DIR + 'bootstrapvalidator/bootstrapValidator.min.js')
             script(src=JS_DIR + 'bootstrapvalidator/zh_CN.js')
             script(src=JS_DIR + 'bootstrap-treeview.min.js')
+            script(src=JS_DIR + 'toastr.min.js')
+            script(src=JS_DIR + 'ewin.js')
             script(src=JS_DIR + 'app.js')
