--- a/src/apps/1688Admin/webapp/dashboard.pug
+++ b/src/apps/1688Admin/webapp/dashboard.pug
@@ -12,7 +12,7 @@ block css
 block content
     .container-fluid.row-space-common
         .row.top-row
-            .col-sm-8.col-xs-12.abs-container.abs-hp-1of3.abs-hp-mobile-1of2
+            .col-sm-8.col-xs-12.abs-container.abs-hp-1of3
                 .abs-content
                     div#chart01(style="width:100%;height:100%")
             .col-sm-4.col-xs-12.abs-container.abs-hp-2of3
