--- a/src/apps/1688Admin/webapp/index-merchant.pug
+++ b/src/apps/1688Admin/webapp/index-merchant.pug
@@ -15,7 +15,7 @@ block content
                 .tree-menu-title-line
             include ../components/tree-menu/tm-has-title
         .right-container
-            iframe.main-iframe(frameborder = 0 src = "merchant.html")
+            iframe.main-iframe(name="main_iframe" frameborder = 0 src = "merchant.html")
         .mobile-menu-mask#menu_mask
 
 block js
@@ -26,7 +26,6 @@ block js
     script(src=JS_DIR + 'app.js')
     script(type='text/javascript').
         $(document).ready(function(){
-
             var isMobile = device.mobile();
             var isTouch = device.mobile() || device.tablet();
             
