--- a/src/apps/1688Admin/webapp/index-party.pug
+++ b/src/apps/1688Admin/webapp/index-party.pug
@@ -15,7 +15,7 @@ block content
                 .tree-menu-title-line
             include ../components/tree-menu/tm-has-title
         .right-container
-            iframe.main-iframe(frameborder = 0 src = "party.html")
+            iframe.main-iframe(name="main_iframe" frameborder = 0 src = "party.html")
         .mobile-menu-mask#menu_mask
 
 block js
