--- a/src/apps/1688Admin/webapp/stylus/bs-overwrite.styl
+++ b/src/apps/1688Admin/webapp/stylus/bs-overwrite.styl
@@ -1,4 +1,4 @@
-//覆盖bootstrap相关样式
+/*!覆盖bootstrap相关样式*/
 .btn
     border none
     &.btn-form
@@ -9,7 +9,7 @@
             padding-left 0.2rem
             padding-right 0.2rem
 .modal-dialog
-    margin DEFAULT_SPACE
+    margin DEFAULT_SPACE auto
 .modal-content
     border none
     box-shadow 0 0 0.1rem 0.05rem alpha(BLACK,0.1)
@@ -22,6 +22,7 @@
 .form-group:last-child
     margin-bottom 0
 */
+/*
 .pagination
     width 100%
     margin 0
@@ -35,7 +36,7 @@
             a
                 background-color GREEN !important
                 border-color GREEN !important
-                color WHITE
+                color WHITE*/
 
 .form-control
     //border-color GRAY_E3
@@ -46,3 +47,6 @@
 
 legend
     margin-bottom DEFAULT_SPACE
+
+.panel
+    border-radius COMMON_BORDER_RADIUS
