--- a/src/apps/1688Admin/webapp/stylus/index.styl
+++ b/src/apps/1688Admin/webapp/stylus/index.styl
@@ -6,6 +6,11 @@
 @require 'bs-overwrite'
 @require 'section-title'
 @require 'block-title'
+@require 'breadcrumb'
+@require 'box-form'
+@require 'cool-form-group'
+@require 'btn'
+@require 'bs-table-overwrite'
 
 a
     text-decoration none !important
@@ -124,17 +129,6 @@ body
     height 100%
 
 
-.border-round
-    border-radius COMMON_BORDER_RADIUS !important
-    .text-slider-item
-        border-radius COMMON_BORDER_RADIUS !important
-.border-round2x
-    border-radius 2*COMMON_BORDER_RADIUS !important
-    .text-slider-item
-        border-radius 2*COMMON_BORDER_RADIUS !important
-.has-shadow
-    box-shadow 0 0 0.05rem 0.03rem alpha(BLACK,0.02) !important
-
 
 //计算row 和col 间距
 CacuRowSpace(space_num)
@@ -160,18 +154,23 @@ CacuRowSpace(space_num)
                         left 0.5*space_num
                         right 0.5*space_num
                         bottom space_num
+        &.no-bottom
+            margin-bottom -1*space_num
         &.top-row
             margin-top space_num
 
 
 .row-space-common
     CacuRowSpace(INDEX_SPACE)
-    /*
-    @media SCREEN_XS
-        CacuRowSpace(0.06rem)*/
+
+.row-space-10
+    CacuRowSpace(0.1rem)
+
 .mobile
     .row-space-common
         CacuRowSpace(INDEX_SPACE_MOBILE)
+    .row-space-10
+        CacuRowSpace(0.04rem)
     
 
 cacuHeightPct(pct,total)
@@ -203,19 +202,6 @@ for i in (1..10)
         .abs-hp-{i}of{j}
             &:before
                 cacuHeightPct(i,j)
-
-@media SCREEN_XS
-    for i in (1..10)
-        for j in range(1,i)
-            .abs-hp-mobile-{j}of{i}
-                &:before
-                    cacuHeightPct(j,i)
-            .abs-hp-mobile-{i}of{j}
-                &:before
-                    cacuHeightPct(i,j)
-            
-
-
 
 
 @require '../../components/topbar/index'
