--- a/src/libs/bootstrap-stylus/bootstrap/popovers.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/popovers.styl
@@ -75,7 +75,7 @@
     margin-left (-($popover-arrow-outer-width))
     border-bottom-width 0
     border-top-color $popover-arrow-outer-fallback-color // IE8 fallback
-    border-top-color $popover-arrow-outer-color
+    //border-top-color $popover-arrow-outer-color
     bottom (-($popover-arrow-outer-width))
 
     &:after
@@ -91,7 +91,7 @@
     margin-top (-($popover-arrow-outer-width))
     border-left-width 0
     border-right-color $popover-arrow-outer-fallback-color // IE8 fallback
-    border-right-color $popover-arrow-outer-color
+    //border-right-color $popover-arrow-outer-color
 
     &:after
       content " "
@@ -105,7 +105,7 @@
     margin-left (-($popover-arrow-outer-width))
     border-top-width 0
     border-bottom-color $popover-arrow-outer-fallback-color // IE8 fallback
-    border-bottom-color $popover-arrow-outer-color
+    //border-bottom-color $popover-arrow-outer-color
     top (-($popover-arrow-outer-width))
 
     &:after
@@ -121,7 +121,7 @@
     margin-top (-($popover-arrow-outer-width))
     border-right-width 0
     border-left-color $popover-arrow-outer-fallback-color // IE8 fallback
-    border-left-color $popover-arrow-outer-color
+    //border-left-color $popover-arrow-outer-color
 
     &:after
       content " "
